# Rust-wasm-udemy

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  main.rs  package-lock.json  package.json
pub/: index.html
server/: index.js
src/: lib.rs  lib_two.rs
www/: index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
www/public/: bootstrap.js  bootstrap.ts  index.html  index.ts
www/public/static/styles/: index.css
www/src/: bootstrap.ts  consts.ts  draw.ts  drawers.ts  helpers.ts  index.html  index.ts  models.ts  types.ts
