[package]
name = "snake_game_v1"
version = "0.1.0"
edition = "2021"
description = "Snake game with webassembly"
license = "MIT"
repository = "https://github.com/Cegard/Rust-wasm-udemy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
